--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,241 @@
-* {
-  font-family: Arial, Helvetica, sans-serif;
+
+body {
+    background-color: #1c1f26;
 }
 
-html, body {
-  margin: 0;
-  border: 0;
-  padding: 0;
-  background-color: #fff;
+
+
+.email {
+    display: flex;
+    justify-content: center;
+    font-size: 20pt;
+    color: coral;
+    text-decoration: underline;
 }
 
-main {
-  margin: auto;
-  width: 50%;
-  padding: 20px;
+h1 {
+    font-size: 50pt;
+    font-weight: bold;
 }
 
-main > h1 {
-  text-align: center;
-  font-size: 3.5em;
+.profile {
+    display: flex;
+    align-items: center;
+    
+    height: 100vh;
+
+    background-color: #232936;
+    color: white;
+}
+
+.about-me {
+    padding-bottom: 50px;
+    background-color: white;
+}
+
+.about-me-text {
+    padding-top: 50px;
+}
+.projects {
+    padding-top: 25px;
+    padding-bottom: 50px;
+    display: flex;
+    justify-content: center;
+    background-color: white;
+}
+
+.contact {
+    /*height: 40vh;*/
+
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+    background-color: #1c1f26;
+    color: white;
+
+    align-items: center;
+    justify-content: center;
+}
+
+.form-group {
+    padding-bottom: 30px;
+}
+
+.contact-form {
+    width: 25vw;
+    padding: 30px;
+
+    background-color: #232936;
+    border-radius: 30px;
+}
+/* center mobile text */
+@media (max-width:767px) {
+    .projects-text {
+        text-align: center !important;
+    }
+    .about-me-text {
+        text-align: center !important;
+    }
+    .tagline {
+        text-align: center !important;
+    }
+}
+
+.tagline {
+    display: flex;
+}
+
+p {
+    font-size: 18pt;
+}
+
+.btn {
+    background-color: coral;
+    color: white;
+
+    border-radius: 30px;
+    width: 200px;
+    height: 55px;
+
+    font-size: 20pt;
+
+    margin-top: 10px;
+}
+
+.btn:hover {
+    color: coral;
+    background-color: white; 
+}
+
+.profile-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: white;
+    color: black;
+
+    border-radius: 30px;
+    width: 275px;
+    
+    height: 55px;
+
+    font-size: 20pt;
+
+    margin-top: 10px;
+
+    box-shadow: 0 6px 20px 0 rgba(0,0,0,0.2);
+    
+}
+
+.btn-icon {
+    margin-top: -5px;
+}
+
+.btn-area {
+
+    /* Change text color to dark blue (#232936) */
+    filter: invert(15%) sepia(9%) saturate(1580%) hue-rotate(183deg) brightness(95%) contrast(96%);
+}
+
+
+.profile-btn:hover {
+    .btn-area {
+        /* Change text color to coral (#ff7f50) */
+        filter: invert(61%) sepia(60%) saturate(1744%) hue-rotate(326deg) brightness(102%) contrast(101%);
+    }
+    
+}
+
+.centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (max-width:767px) {
+    .btn {
+        width: 275px;
+    }
+    .about-me-btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    .btn-col {
+        margin-top: 25px;
+    }
+    .btn-area {
+        padding: 0px;
+    }
+    
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.headshot {
+    height: 200px;
+    width: auto;
+    border-radius: 50%;
+    margin-top: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.headshot-col {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.logo {
+    max-height: 50px;
+    max-width: auto;
+}
+
+.link {
+    color: coral;
+    font-weight: 600;
+}
+
+.link:active {
+    color: rgb(255, 176, 147);
+}
+
+.card {
+    box-shadow: 0 6px 20px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+}
+
+.card:hover {
+    transform: scale(1.1);
+    box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.4);
+    z-index: 3;
+}
+
+::selection {
+    background: rgb(255, 208, 191); /* WebKit/Blink Browsers */
+    color: black;
+}
+
+::-moz-selection {
+    background: rgb(255, 208, 191); /* Gecko Browsers */
+    color: black;
+}
+
+span.highlight {
+    background: linear-gradient(180deg,rgba(255,255,255,0) 65%, rgb(255, 209, 192) 65%);
+    display: inline;
+}
+
+span.gradient {
+    background-image: linear-gradient(to right, #F27121cc, #E94057cc, #8A2387cc);
+    border-radius: 6px;
+    padding: 3px 6px;
 }
