--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,10 @@ h1 {
 .about-me-text {
     padding-top: 50px;
 }
+
+.about-me-descr {
+    padding-right: 25px;
+}
 .projects {
     padding-top: 25px;
     padding-bottom: 50px;
@@ -62,7 +66,7 @@ h1 {
 }
 
 .contact-form {
-    width: 25vw;
+    width:35vw;
     padding: 30px;
 
     background-color: #232936;
