--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,7 @@ h1 {
     display: flex;
     align-items: center;
     
-    height: 100vh;
+    min-height: 100vh;
 
     background-color: #232936;
     color: white;
@@ -139,7 +139,7 @@ p {
 
     font-size: 20pt;
 
-    margin-top: 10px;
+    margin-bottom: 10px;
 
     box-shadow: 0 6px 20px 0 rgba(0,0,0,0.2);
 }
